--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,17 +1,11 @@
 ################
 ### MONITORS ###
 ################
-
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
 ###################
 ### MY PROGRAMS ###
 ###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-
-# Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
@@ -19,18 +13,12 @@ $menu = wofi --show drun
 #################
 ### AUTOSTART ###
 #################
-
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
-
-# exec-once = $terminal
 exec-once = systemctl --user start hyprpolkitagent 
 exec-once = waybar 
 exec-once = hyprpaper 
 exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores onli images
-
 # -- pywal colors --
 source = ~/.config/wal/templates/colors-hyprland
 
@@ -39,35 +27,12 @@ source = ~/.config/wal/templates/colors-hyprland
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-
-###################
-### PERMISSIONS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Permissions/
-# Please note permission changes here require a Hyprland restart and are not applied on-the-fly
-# for security reasons
-
-# ecosystem {
-#   enforce_permissions = 1
-# }
-
-# permission = /usr/(bin|local/bin)/grim, screencopy, allow
-# permission = /usr/(lib|libexec|lib64)/xdg-desktop-portal-hyprland, screencopy, allow
-# permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
-
-
 #####################
-### LOOK AND FEEL ###
+   ### GENERAL ###
 #####################
-
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 1
     gaps_out = 2
@@ -94,7 +59,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 0.95
-    inactive_opacity = 0.8
+    inactive_opacity = 0.85
 
     shadow {
         enabled = false
@@ -142,16 +107,6 @@ animations {
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
-
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrule = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrule = bordersize 0, floating:0, onworkspace:f[1]
-# windowrule = rounding 0, floating:0, onworkspace:f[1]
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -222,11 +177,9 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, firefox
-
+bind = $mainMod, L, exec, hyprlock
 # waybar
-#bind = $mainMod SHIFT, P, exec, ~/.config/waybar/launch.sh
-bind = $mainMod SHIFT, M, exec, waybar
-#bind = $mainMod, B, exec, killall -SIGUSR1 waybar
+bind = $mainMod, M, exec, pkill waybar && waybar &
 
 # wallpaper/swww
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/set_wallpaper.sh
