--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,16 +1,16 @@
 background {
     monitor =
-    path = /home/helia/Downloads/wallpapers/wallpaper2.jpg
+    path = /home/helia/Downloads/wallpapers/rockOS
     color = rgba(25, 20, 20, 0.8)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
-    blur_size = 0
-    noise = 0
-    contrast = 0
+    blur_passes = 3 # 0 disables blurring
+    blur_size = 8
+    noise = 0.011
+    contrast = 1.0
     brightness = 0.7
-    vibrancy = 0.9
-    vibrancy_darkness = 0.8
+    vibrancy = 0.3
+    vibrancy_darkness = 0.0
 }
 
 input-field {
@@ -19,7 +19,7 @@ input-field {
     outline_thickness = 2
     dots_size = 0.27 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.25 # Scale of dots' absolute size, 0.0 - 1.0
-    dots_center = false
+    dots_center = true 
     dots_rounding = -1 # -1 default circle, -2 follow input-field rounding
     outer_color = rgba(15,15,15,0)
     inner_color = rgba(20, 20, 20, 0.8)
@@ -39,7 +39,7 @@ input-field {
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
-    font_family= Hermit 
+    font_family= SF Pro Display 
 
     position = 0, 0
     halign = center
@@ -54,12 +54,12 @@ label {
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
     color = rgba(255, 255, 255, 0.9)
     font_size = 24
-    font_family = iosevka
+    font_family = SF Pro Display
     rotate = 0 # degrees, counter-clockwise
 
-    position = -65, 120
-    halign = right
-    valign = bottom
+    position = 0, 40
+    halign = center
+    valign = center 
 }
 
 label {
@@ -68,11 +68,11 @@ label {
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
     color = rgba(255, 255, 255, 0.9)
     font_size = 56
-    font_family = iosevka
+    font_family = SF Pro Display
     rotate = 0 # degrees, counter-clockwise
 
-    position = -60, 40
-    halign = right
-    valign = bottom
+    position = 0, -54
+    halign = center 
+    valign = center
 }
 
