minor hyprland.conf changes

--- a/hypr/colors.conf
+++ b/hypr/colors.conf
@@ -1,18 +1,18 @@
 $foregroundCol = 0xffc1bfc0 
-$backgroundCol = 0xff0C0D15
-$color0 = 0xff0C0D15
-$color1 = 0xff5F90B2
-$color2 = 0xff4094C1
-$color3 = 0xff60AACC
-$color4 = 0xffB1A1B2
-$color5 = 0xff95B5CC
-$color6 = 0xffA8CEE0
-$color7 = 0xffe0e7eb
-$color8 = 0xff9ca1a4
-$color9 = 0xff5F90B2
-$color10 = 0xff4094C1
-$color11 = 0xff60AACC
-$color12 = 0xffB1A1B2
-$color13 = 0xff95B5CC
-$color14 = 0xffA8CEE0
-$color15 = 0xffe0e7eb
+$backgroundCol = 0xff010101
+$color0 = 0xff010101
+$color1 = 0xff1D6F97
+$color2 = 0xff1E9BD4
+$color3 = 0xff17B1F6
+$color4 = 0xff38BEE2
+$color5 = 0xffA3A3A2
+$color6 = 0xff98E7F3
+$color7 = 0xffdfdfdf
+$color8 = 0xff9c9c9c
+$color9 = 0xff1D6F97
+$color10 = 0xff1E9BD4
+$color11 = 0xff17B1F6
+$color12 = 0xff38BEE2
+$color13 = 0xffA3A3A2
+$color14 = 0xff98E7F3
+$color15 = 0xffdfdfdf
