--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,14 +1,14 @@
 background {
     monitor =
-    path = /home/helia/Downloads/wallpapers/rockOS
+    path = /home/helia/Downloads/wallpapers/P3 Protag2.jpeg
     color = rgba(25, 20, 20, 0.8)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_passes = 3 # 0 disables blurring
-    blur_size = 8
+    blur_size = 2
     noise = 0.011
     contrast = 1.0
-    brightness = 0.7
+    brightness = 0.9
     vibrancy = 0.3
     vibrancy_darkness = 0.0
 }
@@ -50,14 +50,14 @@ input-field {
 
 label {
     monitor =
-    text = <i>$USER</i>
+    text = $USER
     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
     color = rgba(255, 255, 255, 0.9)
-    font_size = 24
+    font_size = 20
     font_family = SF Pro Display
     rotate = 0 # degrees, counter-clockwise
 
-    position = 0, 40
+    position = 0, -34
     halign = center
     valign = center 
 }
@@ -71,7 +71,7 @@ label {
     font_family = SF Pro Display
     rotate = 0 # degrees, counter-clockwise
 
-    position = 0, -54
+    position = 0, 54 
     halign = center 
     valign = center
 }
