--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/helia/Downloads/wallpapers/rockOS
-wallpaper =eDP-1, /home/helia/Downloads/wallpapers/rockOS
+preload = /home/helia/Downloads/wallpapers/P3 Protag2.jpeg
+wallpaper = eDP-1, /home/helia/Downloads/wallpapers/P3 Protag2.jpeg
