--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,7 +20,8 @@ exec-once = hypridle
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores onli images
 # -- pywal colors --
-source = ~/.config/wal/templates/colors-hyprland
+# source = ~/.config/wal/templates/colors-hyprland
+source = ~/.config/hypr/colors.conf
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -37,12 +38,11 @@ general {
     gaps_in = 1
     gaps_out = 2
 
-    border_size = 1
+    border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(bbbbbbbb) 
-    col.inactive_border = rgba(222222ff)
-
+    col.active_border = $color10 $color11
+    col.inactive_border = $color6
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
 
@@ -54,8 +54,8 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 4
-    rounding_power = 2
+    rounding = 8 
+    rounding_power = 2 
 
     # Change transparency of focused and unfocused windows
     active_opacity = 0.95
@@ -64,7 +64,7 @@ decoration {
     shadow {
         enabled = false
         range = 4
-        render_power = 3
+        render_power = 4
         color = rgba(1a1a1aee)
     }
 
@@ -80,18 +80,20 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = true 
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = zoom, 1,0,0,1
     bezier = linear,0,0,1,1
     bezier = almostLinear,0.5,0.5,0.75,1.0
     bezier = quick,0.15,0,0.1,1
 
     animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
+  #animation = border, 1, 5.39, easeOutQuint
+  #animation = borderangle, 1, 8, default
     animation = windows, 1, 4.79, easeOutQuint
     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
     animation = windowsOut, 1, 1.49, linear, popin 87%
@@ -103,9 +105,12 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+  #animation = workspaces, 1, 1.94, zoom, slide 
+  #animation = workspaces, 1, 1.94, almostLinear, fade
+  #animation = workspacesIn, 1, 1.21, almostLinear,fade
+    animation = workspacesOut, 1, 1.94, zoom,slidefade   
+    animation = workspacesIn, 1, 1.21, zoom,slidefade
+  
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -149,16 +154,19 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true 
 }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = compx-vxe-mouse-1k-dongle-1
+    sensitivity = -0.7
 }
-
+device {
+    name = tpps/2-ibm-trackpoint
+    sensitivity = -0.8
+}
 
 ###################
 ### KEYBINDINGS ###
@@ -169,6 +177,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
+bind = $mainMod, Y, exec, $terminal, togglefloating
 bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
@@ -179,7 +188,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, B, exec, firefox
 bind = $mainMod, L, exec, hyprlock
 # waybar
-bind = $mainMod, M, exec, pkill waybar && waybar &
+bind = $mainMod SHIFT, B, exec, pkill waybar
+bind = $mainMod SHIFT ALT, B, exec, waybar &
 
 # wallpaper/swww
 bind = $mainMod, W, exec, ~/.config/hypr/scripts/set_wallpaper.sh
@@ -201,10 +211,10 @@ bind = $mainMod SHIFT , up, movewindow, u
 bind = $mainMod SHIFT , down, movewindow, d 
 
 # Move Floating Window
-binde = $mainMod CTRL, right, moveactive, 60 0
-binde = $mainMod CTRL, left, moveactive, -60 0
-binde = $mainMod CTRL, up, moveactive, 0 -60
-binde = $mainMod CTRL, down, moveactive, 0 60
+binde = $mainMod ALT, right, moveactive, 20 0
+binde = $mainMod ALT, left, moveactive, -20 0
+binde = $mainMod ALT, up, moveactive, 0 -20
+binde = $mainMod ALT, down, moveactive, 0 20
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -231,8 +241,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT,M, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT,M, movetoworkspace, special:magic
 
 #Screenshot
 bind = $mainMod SHIFT,S, exec, grim -g "$(slurp -d)" - | wl-copy
